# robodog-v3

./: .gitignore  CHANGES.txt  CMakeLists.txt  DIAGNOSIS_REPORT.md  IMPLEMENTATION_COMPLETE.md  JETSON_TROUBLESHOOTING.md  MIGRATION_GUIDE.md  POSTURE_IMPLEMENTATION_SUMMARY.md  POSTURE_SYSTEM_README.md  PRECONFIGURED_POSTURES.md  QUICK_POSTURE_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RPLIDAR_SETUP.md  SERVO_CONTROL_DOCUMENTATION.md  SERVO_DIAGNOSTICS.md  SERVO_FIX_QUICK_GUIDE.md  SERVO_NOT_RESPONDING.md  SETUP_GUIDE.md  START_HERE.md  package.xml
config/: controller_config.yaml
include/: Button.h  CommandMenu.h  GCodeController.h  IK.h  Leg.h  MathHelpers.h  MovePrimitives.h  RemoteController.h  SoundService.h  Utils.h
include/RemoteControl/: JoyMapping.h
include/Servos/: LX16a.h  Servo.h  ServoController.h
launch/: remote_controller.launch.py  robodog_complete.launch.py
scripts/: fix_8bitdo_connection.sh
src/: IK.cpp  Leg.cpp  MathHelpers.cpp  Utils.cpp  robodog_joy_node.cpp
src/Joints/: JointDouble.cpp  JointSingle.cpp
src/RemoteControl/: Button.cpp  CommandMenu.cpp  RemoteController.cpp  RemoteControllerProper.cpp
src/Robots/: Leg_HW_Config.txt  RobotV2.cpp  RobotV3.cpp
src/Services/: RobotClient.cpp  RobotHW.cpp  SayService.cpp  ServoControllerDiagnostics.cpp  ServoScanner.cpp
src/Servos/: LX16a.cpp  Servo.cpp  ServoController.cpp  ServoLX16a.cpp
src/Trajectory/: BaseState.cpp  GCodeController.cpp  MovePrimitives.cpp
srv/: GcodeService.srv  SayService.srv
